deploy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wh-gw
  namespace: webhookrelay
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "webhookdeployemnt-secret"
      hosts:
        - "web-hook-relay.spl.guru"

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webhookdeployemnt
  namespace: webhookrelay
spec:
  gateways:
    - wh-gw
  hosts:
    - web-hook-relay.spl.guru
  http:
    - route:
        - destination:
            host: webhookproxy-service
            port:
              number: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: webhookproxy-service
  namespace: webhookrelay
spec:
  selector:
    app: webhookproxy
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhookproxy-deployment
  namespace: webhookrelay
  labels:
    app: webhookproxy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webhookproxy
  template:
    metadata:
      labels:
        app: webhookproxy
    spec:
      containers:
        - name: main
          image: rfaircloth/webhook2hec:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
# rfaircloth/webhookproxy:tagname
